objects/ProcedureReview__c.object
<CustomObject>
    <fields>
        <fullName>DateTimeOfAppointment__c</fullName>
        <label>DateTimeOfAppointment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTimeOfReview__c</fullName>
        <label>DateTimeOfReview</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProcedureRanking__c</fullName>
        <label>ProcedureRanking</label>
        <referenceTo>Ranking__c</referenceTo>
        <relationshipLabel>ProcedureReviews</relationshipLabel>
        <relationshipName>ProcedureReviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RatingAsNumber__c</fullName>
        <formula>CASE(TEXT(RatingInStars__c), &quot;★★★★★&quot;, 5, &quot;★★★★&quot;, 4, &quot;★★★&quot;, 3,  &quot;★★&quot;, 2, &quot;★&quot;,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RatingAsNumber</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RatingInStars__c</fullName>
        <label>RatingInStars</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReviewText__c</fullName>
        <label>ReviewText</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <label>ProcedureReview</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Review-{00000000}</displayFormat>
        <label>ProdedureReview Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProcedureReviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>